--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "gatsby": "^2.29.1",
     "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.8.0",
@@ -15,10 +16,10 @@
     "gatsby-plugin-sharp": "^2.11.1",
     "gatsby-source-filesystem": "^2.8.0",
     "gatsby-source-shopify": "^3.7.1",
-    "gatsby-theme-shopify-manager": "^0.1.8",
     "gatsby-transformer-sharp": "^2.9.0",
     "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
+    "query-string": "^6.14.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
