--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "query-string": "^6.14.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-helmet": "^6.1.0",
-    "shopify-buy": "^2.11.0"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
