--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.14.0",
-    "react": "^16.14npm .0",
+    "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
