--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@reach/router": "^1.3.4",
-    "gatsby": "^2.29.1",
+    "gatsby": "^3.0.0",
     "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.8.0",
     "gatsby-plugin-manifest": "^2.9.0",
@@ -15,6 +15,7 @@
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^3.0.0-next.2",
     "gatsby-plugin-sharp": "^2.11.1",
+    "gatsby-plugin-styled-components": "^4.1.0",
     "gatsby-source-filesystem": "^2.8.0",
     "gatsby-source-shopify": "^3.7.1",
     "gatsby-transformer-sharp": "^2.9.0",
@@ -25,7 +26,8 @@
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
-    "shopify-buy": "^2.11.0"
+    "shopify-buy": "^2.11.0",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "prettier": "2.1.2"
