--- a/package.json
+++ b/package.json
@@ -6,31 +6,31 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@reach/router": "^1.3.4",
-    "gatsby": "^2.29.1",
+    "gatsby": "^3.2.1",
     "gatsby-background-image": "^1.3.1",
-    "gatsby-image": "^2.8.0",
-    "gatsby-plugin-manifest": "^2.9.0",
-    "gatsby-plugin-offline": "^3.7.0",
-    "gatsby-plugin-react-helmet": "^3.7.0",
-    "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sass": "^3.0.0-next.2",
-    "gatsby-plugin-sharp": "^2.11.1",
-    "gatsby-plugin-styled-components": "^4.1.0",
-    "gatsby-source-filesystem": "^2.8.0",
-    "gatsby-source-shopify": "^3.7.1",
-    "gatsby-transformer-sharp": "^2.9.0",
+    "gatsby-image": "^3.2.0",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-offline": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-plugin-react-svg": "^3.0.1",
+    "gatsby-plugin-sass": "^4.2.0",
+    "gatsby-plugin-sharp": "^3.2.1",
+    "gatsby-plugin-styled-components": "^4.2.0",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-source-shopify": "^4.2.0",
+    "gatsby-transformer-sharp": "^3.2.0",
     "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
-    "query-string": "^6.14.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "query-string": "^7.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "shopify-buy": "^2.11.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "prettier": "^2.2.1"
   },
   "keywords": [
     "gatsby"
