--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "faunadb": "^4.2.0",
     "gatsby": "^3.2.1",
     "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^3.2.0",
@@ -27,6 +28,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "shopify-buy": "^2.11.0",
+    "shopify-verify-webhook": "^1.0.1",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
