--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "@react-icons/all-files": "^4.1.0",
     "axios": "^0.21.1",
     "faunadb": "^4.2.0",
     "gatsby": "^3.3.0",
